--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Wenhao Wang"
-  avatar           : "my_photi_wenhao_wang.png"
+  avatar           : "my_photo_wenhao_wang.png"
   bio              : "Ph.D. student at CISPA"
   location         : "Saarbrücken, Germany"
   employer         :
