--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Wenhao Wang / 汪文浩"
 title_separator          : "-"
 name                     : &name "Wenhao Wang"
-description              : &description "Ph.D. student at CISPA"
+description              : &description "Ph.D. candidate at CISPA"
 url                      : https://wenhaowang1995.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
