--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Wenhao Wang"
   avatar           : "my_photo_wenhao_wang.png"
-  bio              : "Ph.D. student at CISPA"
+  bio              : "Ph.D. candidate at CISPA"
   location         : "Saarbrücken, Germany"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
